# walle

./: .gitignore  MANIFEST.in  Makefile  README.md  canonical_test.go  conf.go  conf_test.go  context.go  errors.go  go.mod  go.sum  keyword_validators.go  model.go  pyproject.toml  setup.py  simplifiers.go  utils.go  utils_test.go  validator.go  validator_test.go  walle.go  walle_test.go
.github/workflows/: ci.yml
c-shared/: build.sh  example.py  main.go  walle.py
cmd/walle/: main.go
docs/: mfjs-spec.md  mfjs-spec.zh.md  mfjs-walle-vs-draft-2020-12.md  mfjs-walle-vs-draft-2020-12.zh.md  walle.md  walle.zh.md
python/c-shared/: build.sh  example.py  main.go
python/tests/: test_fork_cgo_regression.py
python/walle/: __init__.py  toolcalling_schema_simplify.py  validator.py
testdata/validator_cases/: FORMAT.txt
testdata/validator_cases/TestAdditionalProperties/: invalid.jsonl  valid.jsonl
testdata/validator_cases/TestAnyOf/: invalid.jsonl  valid.jsonl
testdata/validator_cases/TestBasicTypes/: invalid.jsonl  valid.jsonl
testdata/validator_cases/TestDefs/: invalid.jsonl  valid.jsonl
testdata/validator_cases/TestDescription/: invalid.jsonl  valid.jsonl
testdata/validator_cases/TestEnforcerCases/: invalid.jsonl  valid.jsonl
testdata/validator_cases/TestID/: invalid.jsonl  valid.jsonl
testdata/validator_cases/TestKeywordsValidation/: invalid.jsonl  valid.jsonl
testdata/validator_cases/TestNestedDefsDepth/: invalid.jsonl  valid.jsonl
testdata/validator_cases/TestNumberFormat/: invalid.jsonl  valid.jsonl
(+12 files in other folders)
